--- a/online-biblioteka/package.json
+++ b/online-biblioteka/package.json
@@ -10,6 +10,8 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "firebase": "^8.9.1",
+    "firebase-admin": "^9.11.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
